# personal_coding_assistant

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pca/: __init__.py  cli.py  config.py  context.py  llm.py  prompts.py
tests/: conftest.py  test_cli.py  test_context.py  test_docs_contract.py  test_llm.py
